# ai4team

./: .gitignore  README.md
data_converter/: .gitignore  README.md  convert_xlsm.py  dProjectai4teamdata_converterdocsUNICODE_CJK_SUPPORT.md  generate_japanese_test.py  generate_test_excel.py  install.bat  install.sh  install_docling.bat  install_docling.sh  main.py  pyproject.toml  requirements.txt  test_docling.py  test_japanese_conversion.py  test_vietnamese_conversion.py  verify_japanese_content.py
data_converter/config/: __init__.py  settings.py
data_converter/docs/: ARCHITECTURE.md  CHANGELOG.md  DOCLING_EXCEL_ENHANCEMENTS.md  DOCLING_IMPLEMENTATION_SUMMARY.md  DOCLING_INTEGRATION.md  FINAL_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKREF_V2.4.md  QUICKREF_V2.5.md  QUICKSTART.md  QUICK_REFERENCE.md  RAG_OPTIMIZATION_GUIDE.md  SUPPORTED_FORMATS.txt  UNICODE_CJK_SUPPORT.md  V2.1_COMPLETION_SUMMARY.txt  V2.2_COMPLETION_SUMMARY.txt  V2.3_COMPLETION_SUMMARY.txt  V2.4_COMPLETION_SUMMARY.md  V2.5_COMPLETION_REPORT.md  V2.5_INDEX.md  VISUAL_GUIDE.md  WHATS_NEW.md  WHATS_NEW_V2.1.md  WHATS_NEW_V2.2.md  WHATS_NEW_V2.3.md  WHATS_NEW_V2.4.md  WHATS_NEW_V2.5.md
data_converter/scripts/: run_converter.bat  run_converter.sh
data_converter/src/: __init__.py  document_converter.py
data_converter/tests/: conftest.py  example_usage.py  generate_vietnamese_test.py  test_converter_factory.py  test_converters.py  test_docling_output.py  test_document_converter.py  test_installation.py  test_libreoffice_converter.py  test_ms_office_converter.py  test_new_features.py  test_python_converters.py  test_utils_modules.py  test_v2.2_changes.py  test_v2.3_changes.py  test_v2.4_changes.py  test_v2.5_features.py  verify_v2.5_installation.py
guardrails/: .env.example  .gitignore  CHANGES.md  CONCURRENCY_UPDATE.md  DELIVERY_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.macos  FORCE_CPU_TRANSFORMERS.md  MANIFEST.in  MULTILINGUAL_ERROR_MESSAGES.md  NGINX_DEPLOYMENT.md  NGINX_ENDPOINTS_UPDATE.md  NGINX_ONLY_ACCESS.md  QUICKREF.md  README  README.md  README_OPTIMIZED.md  README_SOLUTION.md  START_NGINX.md  VISUAL_GUIDE.md  __init__.py  cache.py  client_example.py  concurrency.py  config.example.yaml  config.py  config.yaml  deploy-nginx.bat  deploy-nginx.sh  docker-compose-macos.yml  docker-compose.yml  download_models.sh  endpoints_admin.py  endpoints_ollama.py  guard_manager.py  http_client.py  init_all_offline.bat  init_tiktoken.bat  (+19 more)
guardrails/bk/: ollama_guard_proxy_old.py
guardrails/config/: config.yaml  nginx-ollama-production.conf
guardrails/docker/: README.md  docker-compose-macos.yml  docker-compose-redis.yml  docker-compose.override.yml  docker-compose.yml  manage.bat  manage.sh
guardrails/docs/: API_CHAT_STREAMING_FIX.md  API_UPDATES.md  APP_TIKTOKEN_CACHE_UPDATE.md  ARCHITECTURE.md  CHANGES_MADE.md  CLEANUP_SUMMARY.md  COMPLETE.md  COMPLETION_REPORT.md  CONCURRENCY_GUIDE.md  CONCURRENCY_IMPLEMENTATION_SUMMARY.md  CONCURRENCY_INDEX.md  CONCURRENCY_MONITORING_INTEGRATION.md  CONCURRENCY_MONITORING_README.md  CONCURRENCY_MONITORING_SUMMARY.md  CONCURRENCY_MONITOR_QUICKSTART.md  CONCURRENCY_QUICKREF.md  CONCURRENCY_TESTING.md  CONFIG_LRU_CACHE_FIX.md  CONNECTION_CLEANUP_OPTIMIZATION.md  CONNECTION_CLEANUP_QUICKREF.md  CONNECTION_CLEANUP_SUMMARY.md  CONNECTION_CLEANUP_VISUAL.md  CPU_MPS_OPTIMIZATION.md  DEBUG_GUIDE.md  DEPENDENCY_CHECK_QUICK_REF.md  DEPENDENCY_CHECK_UPDATE.md  DEPENDENCY_UPDATE_COMPLETE.md  DIRECT_IMPORT_COMPARISON.md  DIRECT_IMPORT_QUICKREF.md  DOCKER_UPDATE_SUMMARY.md  FILES_CREATED_MODIFIED.md  FILES_DELIVERED.md  GUARD_MANAGER_REFACTOR.md  GUARD_VS_DIRECT_SCANNERS.md  HTTP_451_UPDATE_COMPLETE.md  HTTP_451_UPDATE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_ERROR_RESPONSES.md  INDEX.md  (+61 more)
guardrails/scripts/: deploy-nginx.bat  deploy-nginx.sh  download_models.sh  monitor_uvicorn.sh  run_proxy.bat  run_proxy.sh  run_proxy_macos.sh  setup_concurrency.bat  setup_concurrency.sh
guardrails/src/: endpoints_ollama.py  endpoints_openai.py  guard_manager.py  ollama_guard_proxy.py  streaming_handlers.py  utils.py
guardrails/tests/: conftest.py  test_api_chat_streaming.py  test_http_451_status.py  test_local_models.py  test_refactored_app.py
llm/: INDEX.md  (+24 more)
reranker/: .dockerignore  DOCKER_README.md  Dockerfile  Dockerfile.gpu  README.md  START_RERANKER_UPDATE.md  __init__.py  app.py  concurrency.py  config.py  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.macos.yml  docker-compose.scale.yml  docker-compose.yml  docker-manage.sh  enhanced_concurrency.py  hf_model.py  index.py  main.py  normalization.py  optimized_hf_model.py  pyproject.toml  requirements.txt  routes.py  service.py  setup.py  start_reranker.sh  test_multi_backend.py  test_structure.py
reranker/config/: README.md  apple_silicon.env  development.env  nginx.conf  production.env  redis.conf
reranker/docs/: ADVANCED_FEATURES.md  ADVANCED_IMPLEMENTATION.md  ADVANCED_QUICKSTART.md  CLEANUP_COMPLETE.md  DEPLOYMENT_CHECKLIST.md  ENV_VARS_COMPARISON.md  ENV_VARS_QUICK_REF.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  MULTI_SERVER_APPLE_SILICON.md  OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION.md  README_UPDATE_COMPLETE.md  START_SCRIPT_COMPLETE.md  START_SCRIPT_UPDATE.md  STRUCTURE_README.md
reranker/scripts/: manage_reranker.sh  performance_test.sh  start_reranker.sh
reranker/tests/: conftest.py
structure_understand/: .gitignore  README.md  app.py  config.yaml  conftest.py  pyproject.toml  req.md  requirements.txt  run_structure_understand.bat  run_structure_understand.sh  structure_summary.html  structure_summary.json  structure_summary.md
structure_understand/input - Copy/: README.md  notes.txt  test_data.csv
structure_understand/src/: cli.py  config.py  file_reader.py  html_report.py  ollama_summarizer.py  openai_summarizer.py  summarizer.py  traversal.py
structure_understand/tests/: test_cli.py  test_config.py  test_file_reader.py  test_html_report.py  test_ollama_summarizer.py  test_openai_summarizer.py  (+2 more)
(+147 files in other folders)
