[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "document-converter"
version = "2.5.0"
description = "Document to PDF converter with caching, adaptive workers, and batch optimization."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "RadteamBaoDA" }
]
dependencies = [
    "docx2pdf>=0.1.8",
    "openpyxl>=3.1.2",
    "python-pptx>=0.6.23",
    "reportlab>=4.0.7",
    "pywin32>=311; platform_system == 'Windows'",
    "tqdm>=4.66.0",
]

[project.scripts]
document-converter = "main:main"

